[package]
name = "martin"
version = "0.1.0"
authors = ["D. Ryan Hild <d.ryan.hild@gmail.com>"]
repository = "https://github.com/dhild/martin.git"
homepage = "https://github.com/dhild/martin.git"
license = "MIT"
readme = "README.md"
documentation = "http://dhild.github.io/martin/"
description = "A Rust library for parsing resource records."

[dependencies]
clippy = {version = "*", optional = true}
nom = "^2.2.0"

[dev-dependencies]
clap = "^2.22.1"

[features]
default = []
dev = ["clippy"]

[badges]
travis-ci = { repository = "dhild/martin" }
