[package]
name = "libdns"
version = "0.1.0"
authors = ["D. Ryan Hild <d.ryan.hild@gmail.com>"]
repository = "https://github.com/dhild/dns-rs.git"
homepage = "https://github.com/dhild/dns-rs.git"
license = "MIT"
readme = "../README.md"
documentation = "http://dhild.github.io/dns-rs/"
description = "Domain name server and resource record library."

[dependencies]
