[package]
name = "martin_server"
description = "A DNS server"
version = "0.1.0"
authors = ["D. Ryan Hild <d.ryan.hild@gmail.com>"]
repository = "https://github.com/dhild/martin"
homepage = "https://github.com/dhild/martin"
license = "MIT"
readme = "../../README.md"
documentation = "http://dhild.github.io/martin/"
keywords = ["dns"]
categories = []
workspace = "../.."

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
clippy = {version = "*", optional = true}
martin_rr = { path = "../rr", version = "0.2.0" }

[dev-dependencies]
log4rs = "^0.7.0"
getopts = "^0.2"
log = "^0.3.8"

[features]
default = []
